kube/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name:  mysql-pv-volume
              mountPath: /var/lib/mysql
      volumes:
        - name:  mysql-pv-volume
          persistentVolumeClaim:
            claimName: mysql-pvc
