kube/library-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-system
  template:
    metadata:
      labels:
        app: library-system
    spec:
      containers:
        - name: app
          image: szymek25/library-system:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: library-system
spec:
  selector:
    app: library-system
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
